data/derived/fa15/progs/unify/prog1284.ml.out
Characters 16-22:
  let _ = del 'z' testee;;
                  ^^^^^^
Error: This expression has type string set
       but an expression was expected of type char set
       Type string is not compatible with type char 
